- Removed unnecessary references - Added required exclude configs to tsc build commands can be run repeatedly - Added tsconfig.json in each package (requirement for compiling)

--- a/packages/project-a/package.json
+++ b/packages/project-a/package.json
@@ -1,6 +1,9 @@
 {
   "name": "project-a",
   "version": "1.0.0",
+  "scripts": {
+    "run": "npx tsc && node ../../dist/project-a/index.js"
+  },
   "dependencies": {
   }
 }
