--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,14 @@
     "module": "commonjs",
     "target": "es5",
     "sourceMap": true,
-    "outDir": "dist"
+    "composite": true
   },
   "exclude": [
     "node_modules",
     "dist"
+  ],
+  "references": [
+    {"path":  "packages/project-a"},
+    {"path":  "packages/project-b"}
   ]
 }
